--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -1,14 +1,30 @@
-{% extends "cadastro_base.html" %}
+{% extends "layout.html" %}
 
 {% block content %}
-    <section class="secao d-flex mb-5">
-        <div class="container-fluid p-5">
-            <div class="row buttons">
-                <div class="column">
-                    <a href="/estudos" class="btn custom-btn">Estudos</a>
-                    <a href="/products" class="btn custom-btn">Products</a>
+<section class="secao d-flex justify-content-center align-items-center" style="min-height: 70vh;">
+    <div class="container">
+        <div class="row justify-content-center g-4">
+            <div class="col-md-4">
+                <div class="card shadow text-center h-100">
+                    <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?auto=format&fit=crop&w=400&q=80" class="card-img-top" alt="Estudos">
+                    <div class="card-body">
+                        <h5 class="card-title">Estudos</h5>
+                        <p class="card-text">Gerencie e acompanhe seus estudos cadastrados.</p>
+                        <a href="/estudos" class="btn custom-btn">Acessar Estudos</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card shadow text-center h-100">
+                    <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=400&q=80" class="card-img-top" alt="Produtos">
+                    <div class="card-body">
+                        <h5 class="card-title">Produtos</h5>
+                        <p class="card-text">Gerencie seus produtos cadastrados facilmente.</p>
+                        <a href="/products" class="btn custom-btn">Acessar Produtos</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 {% endblock %}
