--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,13 +23,13 @@
                             <a class="nav-link" aria-current="page" href="/">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/estudos">Estudos</a>
+                            <a class="nav-link" href="/estudos_user">Estudos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/store">Store</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Biblia em mim Music</a>
+                            <a class="nav-link" href="/cadastro">Cadastro</a>
                         </li>
                          <li class="nav-item">
                             <a class="nav-link" href="/Sobre">Sobre</a>
