--- a/templates/estudos.html
+++ b/templates/estudos.html
@@ -38,7 +38,7 @@
                           </div>
                           <div class="mb-3">
                             <label for="image" class="form-label">Imagem</label>
-                            <input type="text" class="form-control" id="image" name="image" required placeholder="Cole o link da imagem aqui">
+                            <input type="text" class="form-control" id="image" name="image" required value="{{ estudo.image }}">
                         </div>
                         </div>
                         <div class="modal-footer">
