--- a/templates/index.html
+++ b/templates/index.html
@@ -2,17 +2,36 @@
 
 {% block content %}
     <section class="secao d-flex mb-5">
-        <h1 class="m-auto p-3">Todos os Estudos</h1>
+        <h1 class="m-auto p-3">Estudos</h1>
         <div class="container-fluid p-5">
             <div class="row">
                 {% for post in posts %}
                     <div class="col-md-4 mb-4">
-                        <div class="card" style="width: 100%;min-height: 200px;">
+                        <div class="card" style="width: 100%;height: 400px;">
                             <div class="card-body">
-                                <img src="{{ post.image }}" alt="{{ post.title }}" class="card-img-top mb-3" style="max-height: 180px; object-fit: cover;">
+                                <img src="{{ post.image }}" alt="{{ post.title }}" class="card-img-top mb-3" style="height: 180px; object-fit: cover;">
                                 <h5 class="card-title">{{ post.title }}</h5>
                                 <p class="card-text">{{ post.resume }}</p>
                                 <a href="/post/{{ post.id }}" class="btn custom-btn">Ler Post</a>
+                            </div>
+                        </div>
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+    </section>
+     <section class="secao d-flex mb-5">
+        <h1 class="m-auto p-3">Estudos</h1>
+        <div class="container-fluid p-5">
+            <div class="row">
+                {% for product in products %}
+                    <div class="col-md-4 mb-4">
+                        <div class="card" style="width: 100%;height: 400px;">
+                            <div class="card-body">
+                                <img src="{{ product.image }}" alt="{{ product.name }}" class="card-img-top mb-3" style="height: 180px; object-fit: cover;">
+                                <h5 class="card-title">{{ product.name }}</h5>
+                                <p class="card-text">{{ product.resume }}</p>
+                                <a href="{{ product.link }}" class="btn custom-btn" target="external">Comprar</a>
                             </div>
                         </div>
                     </div>
