--- a/templates/products.html
+++ b/templates/products.html
@@ -1,1 +1,115 @@
 {% extends "layout.html" %}
+
+{% block content %}
+        <main class="estudos m-auto p-4">
+        <h1 class="titulo m-auto p-4">Estudos</h1>
+        <a href="#" class="btn custom-btn mb-4" data-bs-toggle="modal" data-bs-target="#newProductModal">Adicionar Novo estudo</a>
+            {% for product in products %}
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <img src="{{ product.image }}" alt="{{ product.name }}" class="card-img">
+                        <h5 class="card-title">{{ product.name }}</h5>
+                        <p class="card-text">{{ product.resume }}</p>
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#editProductModal{{ product.id }}" class="btn custom-btn">Editar</a>
+                        <a href="/product/delete/{{ product.id }}" class="btn custom-btn">Deletar</a>
+                        <a href="{{ product.link }}" class="btn custom-btn" target="external">Comprar</a>
+                    </div>
+                </div>
+                <!-- Modal Editar Estudo para cada estudo -->
+                <div class="modal fade" id="editProductModal{{ product.id }}" tabindex="-1" aria-labelledby="editarEstudoModalLabel{{ product.id }}" aria-hidden="true">
+                  <div class="modal-dialog">
+                    <div class="modal-content">
+                      <form method="POST" action="{{ url_for('edit_product', id=product.id) }}">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="editProductModalLabel{{ product.id }}">Editar Produto</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+                        </div>
+                        <div class="modal-body">
+                          <div class="mb-3">
+                            <label for="name{{ product.id }}" class="form-label">Nome</label>
+                            <input type="text" class="form-control" id="name{{ product.id }}" name="name" required value="{{ product.name }}">
+                          </div>
+                          <div class="mb-3">
+                            <label for="resume{{ product.id }}" class="form-label">Resumo</label>
+                            <input type="text" class="form-control" id="resume{{ product.id }}" name="resume" required value="{{ product.resume }}">
+                          </div>
+                            <div class="mb-3">
+                                <label for="author{{ product.id }}" class="form-label">Autor</label>
+                                <input type="text" class="form-control" id="author{{ product.id }}" name="author" required value="{{ product.author }}">
+                            </div>
+
+                            <div class="mb-3">
+                                <label for="category{{ product.id }}" class="form-label">Categoria</label>
+                                <input type="text" class="form-control" id="category{{ product.id }}" name="category" required value="{{ product.category }}">
+                            </div>
+                          <div class="mb-3">
+                            <label for="link{{ product.id }}" class="form-label">Link</label>
+                            <input class="form-control" id="link{{ product.id }}" name="link" rows="4" required value="{{ product.link }}">
+                          </div>
+                          <div class="mb-3">
+                            <label for="image{{ product.id }}" class="form-label">Imagem</label>
+                            <input type="text" class="form-control" id="image{{ product.id }}" name="image" required value="{{ product.image }}">
+                        </div>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn custom-btn" data-bs-dismiss="modal">Cancelar</button>
+                          <button type="submit" class="btn custom-btn">Salvar</button>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+            {% endfor %}
+    </main>
+
+    <!-- Modal Estudos -->
+<!-- O modal de edição individual agora está dentro do loop de estudos -->
+
+
+<div class="modal fade" id="newProductModal" tabindex="-1" aria-labelledby="newProductModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form method="POST" action="{{ url_for('new_product') }}">
+        <div class="modal-header">
+          <h5 class="modal-title" id="newProductModalLabel">Novo Produto</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Fechar"></button>
+        </div>
+        <div class="modal-body">
+          <div class="mb-3">
+            <label for="name" class="form-label">Nome</label>
+            <input type="text" class="form-control" id="name" name="name" required>
+          </div>
+          <div class="mb-3">
+            <label for="resume" class="form-label">Resumo</label>
+            <input type="text" class="form-control" id="resume" name="resume" required>
+          </div>
+             <div class="mb-3">
+            <label for="author" class="form-label">Autor</label>
+            <input type="text" class="form-control" id="author" name="author" required>
+          </div>
+
+            <div class="mb-3">
+                <label for="category" class="form-label">Categoria</label>
+                <input type="text" class="form-control" id="category" name="category" required>
+            </div>
+          <div class="mb-3">
+            <label for="link" class="form-label">Link</label>
+            <input class="form-control" id="link" name="link" rows="4" required>
+          </div>
+             <div class="mb-3">
+            <label for="image" class="form-label">Imagem</label>
+            <input type="text" class="form-control" id="image" name="image" required placeholder="Cole o link da imagem aqui">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn custom-btn" data-bs-dismiss="modal">Cancelar</button>
+          <button type="submit" class="btn custom-btn">Salvar</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+    
+
+
+{% endblock %}
