--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         </div>
     </section>
      <section class="secao d-flex mb-5">
-        <h1 class="m-auto p-3">Estudos</h1>
+        <h1 class="m-auto p-3">Store</h1>
         <div class="container-fluid p-5">
             <div class="row">
                 {% for product in products %}
