--- a/templates/index.html
+++ b/templates/index.html
@@ -6,17 +6,22 @@
         <div class="container-fluid p-5">
             <div class="row">
                 {% for post in posts %}
-                    <div class="col-md-4 mb-4">
-                        <div class="card" style="width: 100%;height: 400px;">
-                            <div class="card-body">
-                                <img src="{{ post.image }}" alt="{{ post.title }}" class="card-img-top mb-3" style="height: 180px; object-fit: cover;">
-                                <h5 class="card-title">{{ post.title }}</h5>
-                                <p class="card-text">{{ post.resume }}</p>
-                                <a href="/post/{{ post.id }}" class="btn custom-btn">Ler Post</a>
+                    {% if loop.index0 < 10 %}
+                        <div class="col-md-4 mb-4">
+                            <div class="card" style="width: 100%;height: 400px;">
+                                <div class="card-body">
+                                    <img src="{{ post.image }}" alt="{{ post.title }}" class="card-img-top mb-3" style="height: 180px; object-fit: cover;">
+                                    <h5 class="card-title">{{ post.title }}</h5>
+                                    <p class="card-text">{{ post.resume }}</p>
+                                    <a href="/post/{{ post.id }}" class="btn custom-btn">Ler Post</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    {% endif %}
                 {% endfor %}
+            </div>
+            <div class="d-flex justify-content-end">
+                <a href="/estudos_user" class="btn custom-btn">Ver todos os estudos</a>
             </div>
         </div>
     </section>
@@ -25,17 +30,22 @@
         <div class="container-fluid p-5">
             <div class="row">
                 {% for product in products %}
-                    <div class="col-md-4 mb-4">
-                        <div class="card" style="width: 100%;height: 400px;">
-                            <div class="card-body">
-                                <img src="{{ product.image }}" alt="{{ product.name }}" class="card-img-top mb-3" style="height: 180px; object-fit: cover;">
-                                <h5 class="card-title">{{ product.name }}</h5>
-                                <p class="card-text">{{ product.resume }}</p>
-                                <a href="{{ product.link }}" class="btn custom-btn" target="external">Comprar</a>
+                    {% if loop.index < 10 %}
+                        <div class="col-md-4 mb-4">
+                            <div class="card" style="width: 100%;height: 400px;">
+                                <div class="card-body">
+                                    <img src="{{ product.image }}" alt="{{ product.name }}" class="card-img-top mb-3" style="height: 180px; object-fit: cover;">
+                                    <h5 class="card-title">{{ product.name }}</h5>
+                                    <p class="card-text">{{ product.resume }}</p>
+                                    <a href="{{ product.link }}" class="btn custom-btn" target="external">Comprar</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    {% endif %}
                 {% endfor %}
+            </div>
+            <div class="d-flex justify-content-end">
+                <a href="/store" class="btn custom-btn">Ver todos os Produtos</a>
             </div>
         </div>
     </section>
