--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,14 @@
                 {% for post in posts %}
                     {% if loop.index0 < 10 %}
                         <div class="col-md-4 mb-4">
-                            <div class="card" style="width: 100%;height: 400px;">
+                            <div class="card">
                                 <div class="card-body">
-                                    <img src="{{ post.image }}" alt="{{ post.title }}" class="card-img-top mb-3" style="height: 180px; object-fit: cover;">
+                                    <img src="{{ url_for('static', filename='Images/' ~ post.image) }}" alt="{{ post.title }}" class="card-img p-5" style="width:100%; height:200px">
                                     <h5 class="card-title">{{ post.title }}</h5>
                                     <p class="card-text">{{ post.resume }}</p>
-                                    <a href="/post/{{ post.id }}" class="btn custom-btn">Ler Post</a>
+                                    <div class="d-flex justify-content-end">
+                                        <a href="/post/{{ post.id }}" class="btn custom-btn">Ler Post</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
